@startuml Car Rental System - Database Schema

skinparam linetype ortho
skinparam entity {
  BackgroundColor #F9F9F9
  BorderColor #333333
}

entity "users" {
  * **id** : BIGINT <<PK, IDENTITY>>
  --
  * name : VARCHAR(255)
  * email : VARCHAR(255) <<UNIQUE>>
  * password : VARCHAR(255)
}

entity "cars" {
  * **id** : BIGINT <<PK, IDENTITY>>
  --
  * car_type : VARCHAR(50)
  \t-- SEDAN, SUV, VAN
  * plate_number : VARCHAR(20) <<UNIQUE>>
}

entity "reservations" {
  * **id** : BIGINT <<PK, IDENTITY>>
  --
  * user_id : BIGINT <<FK>>
  * car_id : BIGINT <<FK>>
  * start_date_time : TIMESTAMP
  * days : INTEGER
}

users ||--o{ reservations : "has"
cars ||--o{ reservations : "booked from"

@enduml
